# malt

./: .gitignore  .gitmodules  CMakeLists.txt  ROADMAP.md
cmake/: FindRTK.cmake  FindSOIL.cmake  Malt.cmake
malt/: CMakeLists.txt  component.cpp  component.hpp  component_mgr.cpp  component_mgr.hpp  engine.hpp  entity.cpp  entity.hpp  game.cpp  game.hpp  list.hpp  malt_fwd.hpp  message.hpp  module.cpp  module.hpp  module.json
malt_basic/components/: transform.hpp
malt_game/: CMakeLists.txt  core_module.cpp  core_module.hpp  game_impl.cpp  game_impl.hpp  main.cpp  scene.maltscene
malt_geometry/: CMakeLists.txt  mesh.cpp  mesh.hpp
malt_render/: CMakeLists.txt  module.json  render_ctx.hpp  render_global.cpp  render_global.hpp  render_module.cpp  render_module.hpp
malt_render/components/: camera.cpp  camera.hpp  material.cpp  material.hpp  mesh_renderer.cpp  mesh_renderer.hpp  render_test.cpp
malt_render/components/lights/: directional_light.cpp  directional_light.hpp  point_light.cpp
malt_render/include/malt_render/components/: camera.hpp
malt_render/texture/: tex2d.cpp  tex2d.hpp
malt_tooling/: build_init.py  get_module.py  list_messages.py  module_tools.py
malt_tooling/cmake/: MaltTools.cmake
malt_util/: CMakeLists.txt  buffer.hpp
sample/: CMakeLists.txt  sample_module.cpp  sample_module.hpp
sample/components/: simple.cpp  simple.hpp  test.cpp  test.hpp
tools/: list_messages.py
